# wrs_shu

./: .gitignore  pyproject.toml  requirements.txt
0000_examples/: cobg_holder_grasps.pickle  cobotta_ppp_animation.py  grasping_antipodal_planning.py  pointcloud_animation.py  simple_grasp_planning.py  ur3e_dual_dynamics.py  xme3p_pick_and_place.py  yumi_bunnysim.pickle  yumi_tube_big.pickle
0000_examples/hayakawa/: tase.py
basis/: data_adapter.py  robot_math.py  trimesh_generator.py
basis/trimesh/: base.py  convex.py  creation.py  geometry.py  graph.py  points.py  voxel.py
dependencies/: pytracik-0.0.2-cp39-cp39-win_amd64.whl
drivers/devices/dh/: ac.script  ag145.py  maingripper.py
grasping/planning/: antipodal.py
hu/: humath.py
hupackage/: hupackage.py  motionplanning.py
ikfast/: example.py  ikfast.py
manipulation/: pick_place_planner.py
modeling/: collision_model.py  dynamic_model.py  geometric_model.py  model_collection.py
modeling/dynamics/bullet/: bdmodel.py
motion/optimization_based/: incremental_nik.py
motion/probabilistic/: rrt.py  rrt_connect.py
robot_con/gofa_con/: gofa_con.py
robot_con/gofa_con/examples/: example_move_j.py
robot_con/ur/: program_builder_dh.py  ur5_ag95_x.py  ur5_ag95_x_rtde.py  ur5e.py  ur7_dh50_rtde.py
robot_sim/_kinematics/: jlchain.py  jlchain_ik.py
robot_sim/end_effectors/gripper/: gripper_interface.py
robot_sim/manipulators/: manipulator_interface.py
robot_sim/manipulators/XME3p/: xme3p.py
robot_sim/robots/: robot_interface.py
trac_ik/: trac_ik.py
visualization/panda/: world.py
(+90 files in other folders)
