[project]
name = "wrs-qiu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorlog>=6.10.1",
    "config~=0.5.1",
    "embreex>=2.17.7.post7",
    "grpcio>=1.34.0",
    "grpcio-tools>=1.34.0",
    "imblearn~=0.0",
    "ipython~=7.28.0",
    "joblib~=1.4.2",
    "keyboard>=0.13.5",
    "matplotlib~=3.7.5",
    "mecheyeapi>=2.5.3",
    "meshpy>=2022.1.3",
    "networkx>=2.5.1",
    "numpy>=1.17.4",
    "numpy-stl>=3.1.2",
    "open3d>=0.17.0",
    "opencv-contrib-python>=4.4.0.46",
    "opencv-python>=4.4.0.46",
    "panda3d>=1.10.7",
    "pandas>=1.3.4",
    "pillow>=9.3.0",
    "pycollada>=0.7.1",
    "pyntcloud>=0.3.1",
    "pyransac3d~=0.6.0",
    "pyreadline>=2.1",
    "pyrealsense2>=2.56.5.9235",
    "pyserial>=3.4",
    "pyvista~=0.43.8",
    "pyyaml>=5.3.1",
    "requests~=2.26.0",
    "rtree>=0.9.7",
    "ruamel-yaml>=0.18.16",
    "scikit-learn>=0.23.2",
    "scipy~=1.7.3",
    "setproctitle>=1.3.7",
    "shapely>=1.7.1",
    "six~=1.16.0",
    "stl~=0.0.2",
    "sympy~=1.12",
    "tifffile>=2024.8.30",
    "toppra==0.6.0",
    "torch~=2.3.1",
    "torchmetrics~=1.4.0.post0",
    "tqdm~=4.66.4",
    "trimesh~=4.3.2",
    "ultralytics>=8.2.40",
    "ur-rtde>=1.6.2",
]

[tool.uv.sources]
pytracik = { path = "dependencies/pytracik-0.0.2-cp39-cp39-win_amd64.whl" }
ur-ikfast = { path = "dependencies/ur_ikfast-0.1.0-cp39-cp39-win_amd64.whl" }
